# Jerasol-Engine

Versions/Engine_V0.01/: imgui.ini
Versions/Engine_V0.02/: imgui.ini
Versions/Engine_V0.1/: imgui.ini
Versions/Engine_V0.2/: Makefile  imgui.ini
Versions/Engine_V0.4/: imgui.ini
engine-ui/: Build and Run.lnk  CMakeLists.txt  GitHub Desktop.lnk  build_and_run comand.bat  build_and_run.bat  imgui.ini
engine-ui/src/: compiler_interface.cpp  compiler_interface.h  flowchart.cpp  flowchart.h  imgui.ini  main.cpp  ui.cpp  ui.h
